--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+body{
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--backgroundColor);
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+  --backgroundColor: rgb(240, 240, 240);
+  --backgrundColorItems: rgb(255, 255, 255);
+  --text:#202020;
+  --items: #9F0013;
+  --itmesHover:#b10115;  
+  
+  transition: .3s all ease;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body.isDarkMode{
+  --backgroundColor: #151515;
+  --backgrundColorItems: #202020;
+  --text: #FFFFFF; 
 }
