fix the bug when you search a single character and refresh the page

--- a/src/components/InputForm/inputForm.css
+++ b/src/components/InputForm/inputForm.css
@@ -1,14 +1,14 @@
 
 .form{
-  border-radius: 6px;
   overflow: hidden;
-  border: 1px solid var(--text);
 }
 .inputSearch{
-  line-height: 20px;
+  line-height: 21px;
   color: var(--text);
   background-color: var(--backgrundColorItems);
-  border: none;
+  border: 1px solid var(--text); 
+  border-right-color: transparent;
+  border-radius: 6px 0 0 6px;
 }
 .inputSearch::-webkit-input-placeholder{
   color: var(--text);
@@ -21,5 +21,6 @@ outline: none;
   color: white;
   background-color: var(--items);
   border: none;
-  padding: 4px;
+  padding: 4px 10px;
+  border-radius: 0 6px 6px 0;
 }
