--- a/src/components/DetailCharacter/detailCharacter.css
+++ b/src/components/DetailCharacter/detailCharacter.css
@@ -29,7 +29,7 @@ color: var(--text);
   gap: 10px;
   grid-auto-flow: row;
   grid-template-columns: repeat(auto-fill, minMax(200px, 1fr));
-  grid-auto-rows: minmax(20px, 1fr);
+  grid-auto-rows: minmax(20px, 90%);
 }
 @media screen and (min-width: 1000px) {
   .cardDetailCharacter{
