--- a/src/components/InfoCharacterDetail/infoCharacterDetail.css
+++ b/src/components/InfoCharacterDetail/infoCharacterDetail.css
@@ -1,8 +1,19 @@
+.wrapInfo{
+  overflow-y: auto;
+  height: 10em;
+}
+.wrapInfo::-webkit-scrollbar{
+ width: 5px;
+}
+.wrapInfo::-webkit-scrollbar-thumb{
+  background-color: var(--items);
+  border-radius: 5px;
+}
 .titleInfo{
-font-size: 1.2em;
-font-weight: 500;
+  font-size: 1.2em;
+  font-weight: 500;
 }
 .infoName{
   font-size: .8em;
-font-weight: 400;
+  font-weight: 400;
 }
