--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,4 +1,6 @@
 .header{
+  top: 0;
+  position: sticky;
   min-height: 15vh;
   margin-bottom: 1.5em;
   box-shadow: 0 0 5px 0 rgba(0,0,0,.5);
@@ -14,4 +16,9 @@
   color: var(--items);
   text-decoration: none;
   text-shadow: 2px 1px 2px rgba(0,0,0,.5);
+}
+.fa-bars{
+  cursor: pointer;
+  font-size: 1.4em;
+  color: var(--text);
 }
