--- a/src/components/ModalLogin/modalLogin.css
+++ b/src/components/ModalLogin/modalLogin.css
@@ -14,6 +14,7 @@
   padding: 10px 20px;
   height: 80vh;
   margin: 10vh auto;
+  border-radius: 10px;
   position: relative;
   background-color: var(--backgroundColor);
 }
