--- a/src/components/InputForm/inputForm.css
+++ b/src/components/InputForm/inputForm.css
@@ -1,15 +1,18 @@
 
 .form{
   overflow: hidden;
-  box-shadow: -1px 2px 5px 0px rgba(0, 0, 0, .5);
   border-radius: 30px;
+  display: flex;
+  width: 8em;
+  box-shadow: -1px 2px 5px 0px rgba(0, 0, 0, .5);
 }
 .inputSearch{
   border: none;
+  width: 100%;
   padding: 5px 8px;
   line-height: 1.6;
   color: var(--text);
-  background-color: var(--backgroundColor);
+  background-color: var(--backgroundColorItems);
 }
 .inputSearch::-webkit-input-placeholder{
   color: var(--text);
@@ -25,4 +28,15 @@
   padding: 8px 12px;
   border-radius: 0;
   background-color: var(--items);
+}
+
+@media screen and (min-width: 360px) {
+  .form{
+    width: 40%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .form{
+    width: 50%;
+  }
 }
