--- a/src/components/Comment/comment.css
+++ b/src/components/Comment/comment.css
@@ -1,7 +1,27 @@
 .wrapComment{
   min-height: 5em;
-  padding: 5px 1em;
+  padding: 5px 1em 1em;
+  margin-bottom: 10px;
   background-color: var(--backgrundColorItems);
+}
+.commentContainer{
+  padding-left:8px ;
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0,.5) ;
+}
+.wrapCommentContent{
+  width: 95%;
+  display: flex;
+  font-size: .9em;
+  color: var(--text);
+  margin: 5px 0;
+  padding-bottom: 1px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.356);
+}
+.commentUsername{
+  margin-right: 8px;
 }
 .newComment{
   display: flex;
