--- a/src/components/DetailCharacter/detailCharacter.css
+++ b/src/components/DetailCharacter/detailCharacter.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0 1em;
+  margin-bottom: 1em;
   color: var(--text);
 }
 .imgDetailCharacter{
